# hsa-receipts

./: .gitignore  README.md
infra/: cdk.json  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
infra/lib/: stack.ts
lambda/: pyproject.toml  requirements.txt
lambda/src/hsa_receipt_archiver/: claude_client.py  email_parser.py  email_sender.py  handler.py  ledger_manager.py  notifier.py  pdf_converter.py  s3_manager.py
lambda/src/hsa_receipts/: claude_client.py  email_parser.py  email_sender.py  handler.py  pdf_converter.py
lambda/tests/: conftest.py  test_claude_client.py  test_email_parser.py  test_email_sender.py  test_handler.py  test_ledger_manager.py  test_notifier.py  test_pdf_converter.py  test_s3_manager.py
