[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsa-receipts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "anthropic",
    "openpyxl",
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest",
    "ty",
    "ruff",
    "boto3-stubs[essential]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hsa_receipts"]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any) are disallowed
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["hsa_receipts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
